market-table.html

--- a/market-table.html
+++ b/market-table.html
@@ -38,16 +38,7 @@
           <label class="subtle" for="symFilter">Symbol</label>
           <select id="symFilter">
             <option value="ALL">All symbols</option>
-          </select>
-        </div>
-        <div class="toolbar">
-  <div class="field">
-    <label for="timeframe">View</label>
-    <select id="timeframe">
-      <option value="daily">Daily</option>
-      <option value="hourly">Hourly</option>
-    </select>
-  </div>
+          </select> </div>
 
   <div class="field">
     <label for="symFilter">Symbol</label>
