market-table.html

--- a/market-table.html
+++ b/market-table.html
@@ -53,6 +53,9 @@
 
         </select>
     </div>
+      <div>
+        <input id="tblSearch" placeholder="Type to filter e.g. MNQ, MES, MGC">
+      </div>
     <div class="hr"></div>
     <div style="overflow:auto">
       <table class="table" id="marketTable">
