market-table.html

--- a/market-table.html
+++ b/market-table.html
@@ -53,8 +53,10 @@
 
         </select>
     </div>
-      <div>
+     <div>
+        <label for="tblSearch" class="subtle">Search</label>
         <input id="tblSearch" placeholder="Type to filter e.g. MNQ, MES, MGC">
+      </div>
       </div>
     <div class="hr"></div>
     <div style="overflow:auto">
