--- a/premium.html
+++ b/premium.html
@@ -7,7 +7,7 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){ dataLayer.push(arguments); }
   gtag('js', new Date());
-  gtag('config', 'G-XXXX', {
+  gtag('config', 'G-QQQ88SMPVS', {
     // מיותר אבל נחמד לפיתוח:
     'debug_mode': (location.hostname === 'localhost')
     // GA4 כבר עושה anonymize IP אוטומטית
