market-table.html

--- a/market-table.html
+++ b/market-table.html
@@ -65,8 +65,8 @@
     <div class="hr"></div>
 
     <!-- Table -->
-    <div style="overflow:auto">
-      <table class="table" id="marketTable">
+    <div class="table-scroll">
+  <table class="table" id="marketTable"> ... </table>
         <thead>
           <tr>
             <th>Symbol</th>
