market-table.html

--- a/market-table.html
+++ b/market-table.html
@@ -65,21 +65,22 @@
     <div class="hr"></div>
 
     <!-- Table -->
-    <div class="table-scroll">
-  <table class="table" id="marketTable"> ... </table>
-        <thead>
-          <tr>
-            <th>Symbol</th>
-            <th>Name</th>
-            <th style="text-align:right">Trend</th>
-            <th style="text-align:right">Pips/Ticks</th>
-            <th style="text-align:right">$</th>
-            <th style="text-align:right">%</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
+<div class="table-scroll">
+  <table class="table" id="marketTable">
+    <thead>
+      <tr>
+        <th>Symbol</th>
+        <th>Name</th>
+        <th style="text-align:right">Trend</th>
+        <th style="text-align:right">Pips/Ticks</th>
+        <th style="text-align:right">$</th>
+        <th style="text-align:right">%</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
+
 
     <p class="subtle">Tip: Use the search box to quickly filter. Switch Daily/Hourly above. Data loads from <code>market.json</code>.</p>
   </div>
