market-table.html

--- a/market-table.html
+++ b/market-table.html
@@ -85,6 +85,14 @@
     <p class="subtle">Tip: Use the search box to quickly filter. Switch Daily/Hourly above. Data loads from <code>market.json</code>.</p>
   </div>
 </div>
+<div id="volCard" class="card">
+  <div class="header">
+    <h3 id="volTitle" class="out" style="margin:0">Volatility</h3>
+    <span id="volUnit" class="badge">Pips/Ticks</span>
+  </div>
+  <canvas id="volChart"></canvas>
+  <p class="subtle" id="volNote">Shows recent history if available.</p>
+</div>
 
 <footer>© <span id="y"></span> QuickLot — For calculation purposes only. No financial advice.</footer>
 
