--- a/market-table.html
+++ b/market-table.html
@@ -242,6 +242,8 @@ document.getElementById('y').textContent=new Date().getFullYear();
     if (href===path) a.classList.add('active');
   });
 })();
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3"></script>
+
 </script>
 </body>
 </html>
