--- a/market-table.html
+++ b/market-table.html
@@ -1,19 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Google tag (GA4) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QQQ88SMPVS"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){ dataLayer.push(arguments); }
-  gtag('js', new Date());
-  gtag('config', 'G-QQQ88SMPVS', {
-    // מיותר אבל נחמד לפיתוח:
-    'debug_mode': (location.hostname === 'localhost')
-    // GA4 כבר עושה anonymize IP אוטומטית
-  });
-</script>
-
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Market Table – QuickLot</title>
@@ -21,13 +8,16 @@
 </head>
 <body>
 
-<nav>
+<nav class="ql-nav">
   <div class="navwrap">
     <a class="brand" href="index.html">QuickLot</a>
-    <a href="market-table.html" data-nav="market-table" class="active">Market Table</a>
-    <a href="premium.html" data-nav="premium">Premium</a>
-    <a href="terms.html" data-nav="terms">Terms</a>
-    <a href="about.html" data-nav="about">About</a>
+    <button class="menu-toggle" aria-label="Toggle menu" aria-expanded="false">☰</button>
+    <div class="menu-links">
+      <a href="market-table.html" data-nav="market-table" class="active">Market Table</a>
+      <a href="premium.html" data-nav="premium">Premium</a>
+      <a href="terms.html" data-nav="terms">Terms</a>
+      <a href="about.html" data-nav="about">About</a>
+    </div>
   </div>
 </nav>
 
@@ -64,37 +54,42 @@
     </div>
     <div class="hr"></div>
 
-    <!-- Table -->
-<div class="table-scroll">
-  <table class="table" id="marketTable">
-    <thead>
-      <tr>
-        <th>Symbol</th>
-        <th>Name</th>
-        <th style="text-align:right">Trend</th>
-        <th style="text-align:right">Pips/Ticks</th>
-        <th style="text-align:right">$</th>
-        <th style="text-align:right">%</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-
+    <!-- Table (do NOT change these tags) -->
+    <div class="table-scroll">
+      <table class="table" id="marketTable">
+        <thead>
+          <tr>
+            <th>Symbol</th>
+            <th>Name</th>
+            <th style="text-align:right">Trend</th>
+            <th style="text-align:right">Pips/Ticks</th>
+            <th style="text-align:right">$</th>
+            <th style="text-align:right">%</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
 
     <p class="subtle">Tip: Use the search box to quickly filter. Switch Daily/Hourly above. Data loads from <code>market.json</code>.</p>
+  </div><!-- /card -->
+
+  <!-- Volatility chart card (shows only when symbol selected & history exists) -->
+  <div id="volCard" class="card" style="display:none">
+    <div class="header" style="display:flex;justify-content:space-between;align-items:center;gap:10px;margin-bottom:8px">
+      <h3 id="volTitle" class="out" style="margin:0">Volatility</h3>
+      <span id="volUnit" class="badge">Pips/Ticks</span>
+    </div>
+    <canvas id="volChart"></canvas>
+    <p class="subtle" id="volNote">Shows recent history if available.</p>
   </div>
-</div>
-<div id="volCard" class="card">
-  <div class="header">
-    <h3 id="volTitle" class="out" style="margin:0">Volatility</h3>
-    <span id="volUnit" class="badge">Pips/Ticks</span>
-  </div>
-  <canvas id="volChart"></canvas>
-  <p class="subtle" id="volNote">Shows recent history if available.</p>
-</div>
+
+</div><!-- /container -->
 
 <footer>© <span id="y"></span> QuickLot — For calculation purposes only. No financial advice.</footer>
+
+<!-- Chart.js for the volatility chart -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3"></script>
 
 <script>
 // -------- Meta (names) + tick values (fallback for $) --------
@@ -104,19 +99,17 @@ const SYMBOL_META = {
   MYM:{name:"Micro Mini Dow"},
   M2K:{name:"Micro E-mini Russell 2000"},
   MGC:{name:"Micro Gold"},
-  MCL:{name:"Micro Crude Oil"},
-  // אפשר להוסיף כאן עוד שמות בהמשך...
+  MCL:{name:"Micro Crude Oil"}
 };
 const TICK_VALUE = { MES:1.25, MNQ:0.50, MYM:0.50, M2K:0.50, MGC:1.00, MCL:1.00 };
 
 // -------- State + helpers --------
 let DATA = { daily:{}, hourly:{} };
-
 const $ = s => document.querySelector(s);
-const tbody     = $('#marketTable tbody');
-const tfSel     = $('#timeframe');
-const symSel    = $('#symFilter');
-const searchEl  = $('#tblSearch');
+const tbody    = $('#marketTable tbody');
+const tfSel    = $('#timeframe');
+const symSel   = $('#symFilter');
+const searchEl = $('#tblSearch');
 
 function fmtNum(v){
   return (v==null || !isFinite(v)) ? '—'
@@ -132,77 +125,61 @@ function savePrefs(){ try{
 } catch(e){} }
 
 (function loadPrefs(){ try{
-  const tf  = localStorage.getItem('quicklot:tblTF');  if(tf)  tfSel.value  = tf;
+  const tf  = localStorage.getItem('quicklot:tblTF');  if(tf)  tfSel.value = tf;
   const q   = localStorage.getItem('quicklot:tblQ');   if(q)   searchEl.value = q;
-  // sym נטען אחרי שנבנה ה-dropdown
 } catch(e){} })();
 
-// ------- build symbols dropdown (צעד 2) -------
+// ------- build symbols dropdown -------
 function buildSymbolOptions(){
   const prev = localStorage.getItem('quicklot:tblSym') || symSel.value || 'ALL';
-
   const set = new Set();
   if (DATA.daily)  Object.keys(DATA.daily).forEach(k => set.add(k));
   if (DATA.hourly) Object.keys(DATA.hourly).forEach(k => set.add(k));
   if (window.SYMBOL_META) Object.keys(SYMBOL_META).forEach(k => set.add(k));
-
   const arr = [...set].sort();
   symSel.innerHTML =
     `<option value="ALL">All symbols</option>` +
     arr.map(s => `<option value="${s}">${s}</option>`).join('');
-
   if (prev && (prev==='ALL' || set.has(prev))) symSel.value = prev;
 }
 
 // ------- render table -------
 function render(){
   const tf   = tfSel.value;
-  const pick = symSel.value;                       // NEW: symbol picked
+  const pick = symSel.value;
   const q    = (searchEl.value||'').trim().toUpperCase();
-
   const src = DATA[tf]||{};
-  const rows=[];
-
-  // נבנה רשימת סימבולים לעבור עליה:
-  const keys = new Set();
-  // אם נבחר סימבול ספציפי – רק אותו; אחרת הכול
-  if (pick && pick!=='ALL') {
-    keys.add(pick);
-  } else {
-    Object.keys(src).forEach(k=>keys.add(k));
-  }
-  // נעשיר משמות אם צריך
+  const keys = new Set(pick && pick!=='ALL' ? [pick] : Object.keys(src));
   Object.keys(SYMBOL_META).forEach(k=>keys.add(k));
 
+  const rows=[];
   for(const sym of [...keys]){
-    const meta = SYMBOL_META[sym] || {name:sym};
-    const rec  = src[sym];
-    if(!rec) continue; // אין נתון לתקופה הזו
-
-    // חיפוש חופשי
-    if(q && !sym.includes(q) && !(meta.name||'').toUpperCase().includes(q)) continue;
-
+    const rec = src[sym];
+    if(!rec) continue;
+    const name = (SYMBOL_META[sym]?.name) || sym;
+    if(q && !sym.includes(q) && !name.toUpperCase().includes(q)) continue;
     const tv  = TICK_VALUE[sym];
     const usd = (rec.usd!=null) ? rec.usd : (isFinite(tv) ? rec.pips*tv : null);
-
-    rows.push({sym, name:meta.name, trend:rec.trend, pips:rec.pips, usd, pct:rec.pct});
+    rows.push({sym, name, trend:rec.trend, pips:rec.pips, usd, pct:rec.pct});
   }
-
   rows.sort((a,b)=>(b.pips||0)-(a.pips||0));
 
-  tbody.innerHTML = rows.map(r=>{
-    const ttxt = r.trend==='up'?'▲ up' : r.trend==='down'?'▼ down' : '—';
-    const tcls = r.trend==='up'?'good' : r.trend==='down'?'bad' : '';
-    return `<tr>
-      <td>${r.sym}</td>
-      <td>${r.name}</td>
-      <td class="${tcls}" style="text-align:right">${ttxt}</td>
-      <td style="text-align:right">${fmtNum(r.pips)}</td>
-      <td style="text-align:right">${r.usd!=null?('$'+fmtNum(r.usd)):'—'}</td>
-      <td style="text-align:right">${r.pct!=null?(fmtNum(r.pct)+'%'):'—'}</td>
-    </tr>`;
-  }).join('');
-
+  if(!rows.length){
+    tbody.innerHTML = `<tr><td colspan="6" class="subtle">No rows to show.</td></tr>`;
+  } else {
+    tbody.innerHTML = rows.map(r=>{
+      const ttxt = r.trend==='up'?'▲ up' : r.trend==='down'?'▼ down' : '—';
+      const tcls = r.trend==='up'?'good' : r.trend==='down'?'bad' : '';
+      return `<tr>
+        <td>${r.sym}</td>
+        <td>${r.name}</td>
+        <td class="${tcls}" style="text-align:right">${ttxt}</td>
+        <td style="text-align:right">${fmtNum(r.pips)}</td>
+        <td style="text-align:right">${r.usd!=null?('$'+fmtNum(r.usd)):'—'}</td>
+        <td style="text-align:right">${r.pct!=null?(fmtNum(r.pct)+'%'):'—'}</td>
+      </tr>`;
+    }).join('');
+  }
   savePrefs();
 }
 
@@ -218,7 +195,7 @@ async function loadData(){
     tbody.innerHTML = `<tr><td colspan="6" class="bad">Failed to load market.json (${e.message}).</td></tr>`;
     return;
   }
-  buildSymbolOptions();   // <— צעד 2: לבנות את ה-dropdown אחרי שטענו נתונים
+  buildSymbolOptions();
   render();
 }
 
@@ -228,79 +205,66 @@ symSel.addEventListener('change', render);
 let tt; searchEl.addEventListener('input', ()=>{ clearTimeout(tt); tt=setTimeout(render,120); });
 document.getElementById('refreshBtn').addEventListener('click', loadData);
 
-// init
+// ------- init -------
 loadData();
 document.getElementById('y').textContent=new Date().getFullYear();
 </script>
-<script>
-// ===== Volatility chart logic =====
-let VOL = {};     // market-history.json content
-let CHART = null; // Chart.js instance
 
+<!-- Volatility chart logic -->
+<script>
+let VOL = {}, CHART = null;
 async function loadHistory(){
   try{
     const res = await fetch('market-history.json?v=' + Date.now(), {cache:'no-cache'});
     if(res.ok) VOL = await res.json();
   }catch(e){ VOL = {}; }
 }
-
-function hideVol(){ document.getElementById('volCard').classList.remove('show'); }
+function hideVol(){ document.getElementById('volCard').style.display='none'; }
+function showVol(){ document.getElementById('volCard').style.display='block'; }
 
 function drawVolChart(sym){
-  const card  = document.getElementById('volCard');
-  const title = document.getElementById('volTitle');
-  if (!VOL[sym] || VOL[sym].length < 2){ hideVol(); return; }
-
-  const rows   = VOL[sym];
-  const labels = rows.map(r => r[0]);   // תאריכים
-  const data   = rows.map(r => r[1]);   // ערכים (pips/ticks)
-
-  title.textContent = `Volatility – ${sym}`;
+  const rows = VOL[sym];
+  if(!rows || rows.length<2){ hideVol(); return; }
+  const labels = rows.map(r=>r[0]);
+  const data   = rows.map(r=>r[1]);
+  document.getElementById('volTitle').textContent = `Volatility – ${sym}`;
   const ctx = document.getElementById('volChart').getContext('2d');
-
   if (CHART) CHART.destroy();
   CHART = new Chart(ctx, {
-    type: 'line',
-    data: {
-      labels,
-      datasets: [{ label:'Pips/Ticks', data, tension:.25, borderWidth:2, pointRadius:0 }]
-    },
-    options: {
-      responsive:true,
-      maintainAspectRatio:false,
-      scales: { x:{ ticks:{ maxTicksLimit:6 } }, y:{ beginAtZero:false } },
-      plugins: { legend:{ display:false }, tooltip:{ intersect:false, mode:'index' } }
+    type:'line',
+    data:{ labels, datasets:[{ label:'Pips/Ticks', data, tension:.25, borderWidth:2, pointRadius:0 }] },
+    options:{ responsive:true, maintainAspectRatio:false,
+      scales:{ x:{ ticks:{ maxTicksLimit:6 } }, y:{ beginAtZero:false } },
+      plugins:{ legend:{ display:false } }
     }
   });
-
-  card.classList.add('show');
+  showVol();
 }
-
-// כשמשתמש בוחר סימבול
-document.getElementById('symFilter').addEventListener('change', () => {
-  const v = document.getElementById('symFilter').value;
-  if (v && v !== 'ALL') drawVolChart(v); else hideVol();
+symSel.addEventListener('change', ()=>{
+  const v = symSel.value;
+  if(v && v!=='ALL') drawVolChart(v); else hideVol();
 });
-
-// טוענים היסטוריה ברקע כשעמוד נטען
-loadHistory().then(()=>{
-  // אם כבר נבחר סימבול ספציפי (משמירת מצב), נצייר אוטומטית
-  const v = document.getElementById('symFilter').value;
-  if (v && v !== 'ALL') drawVolChart(v);
-});
+loadHistory().then(()=>{ const v = symSel.value; if(v && v!=='ALL') drawVolChart(v); });
 </script>
 
-<!-- סימון קישור פעיל (אם תרצה להשאיר) -->
+<!-- nav hamburger -->
 <script>
 (function(){
+  const btn = document.querySelector('.menu-toggle');
+  const menu = document.querySelector('.menu-links');
+  if(!btn||!menu) return;
   const path = location.pathname.split('/').pop() || 'market-table.html';
-  document.querySelectorAll('nav a[href]').forEach(a=>{
-    const href = a.getAttribute('href');
-    if (href===path) a.classList.add('active');
+  menu.querySelectorAll('a[href]').forEach(a=>{ if(a.getAttribute('href')===path) a.classList.add('active'); });
+  btn.addEventListener('click', ()=>{
+    const open = !menu.classList.contains('open');
+    menu.classList.toggle('open', open);
+    btn.setAttribute('aria-expanded', open?'true':'false');
+  });
+  document.addEventListener('click', e=>{
+    if (!menu.contains(e.target) && !btn.contains(e.target)) menu.classList.remove('open');
   });
 })();
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3"></script>
-
 </script>
+
 </body>
 </html>
